tests/compile-fail/stacked_borrows/invalidate_against_barrier2.stderr
error: Undefined Behavior: not granting access to tag <untagged> because incompatible item is protected: [SharedReadOnly for <1904> (call 611)]
  --> $DIR/invalidate_against_barrier2.rs:5:14
   |
LL |     unsafe { *x = 0 }; //~ ERROR protect
   |              ^^^^^^ not granting access to tag <untagged> because incompatible item is protected: [SharedReadOnly for <1904> (call 611)]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `inner` at $DIR/invalidate_against_barrier2.rs:5:14
note: inside `main` at $DIR/invalidate_against_barrier2.rs:12:5
  --> $DIR/invalidate_against_barrier2.rs:12:5
   |
LL |     inner(xraw, xref);
   |     ^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

